# xdp-accent-adapter

./: Cargo.toml  README.md
src/: backends.rs  color.rs  config.rs  main.rs
src/backends/: adw_gtk3.rs  libadwaita.rs
